log
Thu 14 Sep 2023 04:16:26 AM UTC: 
 tests:  1|8
total_score: 0/70
a4a0b07
Thu 14 Sep 2023 04:33:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:13: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |   TreeMap * mapa=(TreeMap*)malloc(sizeof(TreeMap));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
6b23ae6
Thu 14 Sep 2023 04:36:27 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7c2261c
Thu 14 Sep 2023 04:49:08 AM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   86 |       return tree->current;
      |              ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb91dd8
Thu 14 Sep 2023 04:53:43 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
205af0f
Thu 14 Sep 2023 04:54:09 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
363a750
Thu 14 Sep 2023 04:55:33 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
1a6cfde
Thu 14 Sep 2023 04:57:33 AM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
8054aed
Thu 14 Sep 2023 04:58:52 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
50e54fd
Thu 14 Sep 2023 05:00:35 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
007891e
Thu 14 Sep 2023 05:01:26 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
9aa3f61
Thu 14 Sep 2023 05:01:48 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
141e2a8
Thu 14 Sep 2023 05:02:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3a7a9dd
Thu 14 Sep 2023 05:02:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
8beb9cc
Thu 14 Sep 2023 05:04:18 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
582ee90
Thu 14 Sep 2023 05:04:29 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
da46661
Thu 14 Sep 2023 05:08:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
fbb0865
Thu 14 Sep 2023 05:08:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4ceb7c0
Thu 14 Sep 2023 05:08:22 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
7911a19
Thu 14 Sep 2023 05:09:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
efc1b42
Thu 14 Sep 2023 05:11:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0180b54
Thu 14 Sep 2023 05:11:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
7b6f331
Thu 14 Sep 2023 05:15:30 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
07d0d9d
Thu 14 Sep 2023 05:16:21 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
77b0b68
Thu 14 Sep 2023 05:16:41 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
a342bec
Thu 14 Sep 2023 05:17:27 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d5d4e52
